# cpp-raft

./: .cproject  .gitignore  .gitmodules  .project  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.rst  raft.h  raft_log.c  raft_logger.cpp  raft_logger.h  raft_msg.h  raft_node.cpp  raft_node.h  raft_private.h  raft_server.c  raft_server.cpp  raft_server.h  raft_server_properties.c  raft_server_properties.cpp  state_mach.cpp  state_mach.h
include/: raft_node.h  raft_private.h  raft_server.h  raft_server_properties.h
tests/: main_test.cpp  mock_send_functions.c  mock_send_functions.cpp  mock_send_functions.h  test_log.c  test_log.cpp  test_node.c  test_node.cpp  test_scenario.c  test_scenario.cpp  test_server.c  test_server.cpp
